projects/gcc_grammar_FR/grammar.output
Grammar

    0 $accept: prog $end

    1 prog: END_OF_INPUT
    2     | '\n'
    3     | stmt_or_expr '\n'
    4     | stmt_or_expr ';'
    5     | declaration '\n'
    6     | declaration ';'
    7     | '?' identifier '\n'
    8     | '?' identifier ';'
    9     | '?' functionCall '\n'
   10     | '?' functionCall ';'
   11     | error '\n'
   12     | error ';'

   13 expression: constant
   14           | vector
   15           | '(' expression ')'
   16           | '-' expression
   17           | '+' expression
   18           | '!' expression
   19           | AND expression
   20           | expression ':' expression
   21           | expression '+' expression
   22           | expression '-' expression
   23           | expression '*' expression
   24           | expression '/' expression
   25           | expression '^' expression
   26           | expression LT expression
   27           | expression LE expression
   28           | expression EQ expression
   29           | expression NE expression
   30           | expression GE expression
   31           | expression GT expression
   32           | expression AND expression
   33           | expression OR expression
   34           | expression AND2 expression
   35           | expression OR2 expression
   36           | arrowAssign
   37           | equationAssign
   38           | tildeAssign
   39           | tildeIidAssign
   40           | functionCall
   41           | variable

   42 arrowAssign: variable ARROW_ASSIGN expression
   43            | functionCall ARROW_ASSIGN expression

   44 tildeAssign: variable TILDE_ASSIGN functionCall
   45            | functionCall TILDE_ASSIGN functionCall

   46 tildeIidAssign: variable TILDEIID_ASSIGN functionCall
   47               | functionCall TILDEIID_ASSIGN functionCall

   48 equationAssign: variable EQUATION_ASSIGN expression
   49               | functionCall EQUATION_ASSIGN expression

   50 variable: identifier optElements
   51         | fxnCall '[' expression ']' optElements
   52         | variable '.' identifier optElements
   53         | variable '.' fxnCall '[' expression ']' optElements

   54 optElements: /* empty */
   55            | elementList

   56 elementList: '[' expression ']'
   57            | '[' ']'
   58            | elementList '[' expression ']'
   59            | elementList '[' ']'

   60 fxnCall: identifier '(' optArguments ')'

   61 functionCall: fxnCall
   62             | variable '.' fxnCall

   63 optArguments: /* empty */
   64             | argumentList

   65 argumentList: argument
   66             | argumentList ',' argument

   67 argument: expression
   68         | identifier EQUAL expression

   69 functionDef: FUNCTION identifier '(' optFormals ')' stmts
   70            | FUNCTION typeSpec identifier '(' optFormals ')' stmts

   71 optFormals: /* empty */
   72           | formalList

   73 formalList: formal
   74           | formalList ',' formal

   75 formal: identifier
   76       | identifier EQUAL expression
   77       | typeSpec identifier
   78       | typeSpec identifier EQUAL expression

   79 typeSpec: identifier optDims optRef

   80 optDims: /* empty */
   81        | dimList

   82 dimList: '[' ']'
   83        | '[' INT ']'
   84        | dimList '[' ']'
   85        | dimList '[' INT ']'

   86 optRef: /* empty */
   87       | '&'

   88 stmts: '{' stmtList '}'
   89      | stmt_or_expr

   90 stmtList: /* empty */
   91         | stmt_or_expr
   92         | stmtList ';' stmt_or_expr
   93         | stmtList ';'
   94         | stmtList '\n' stmt_or_expr
   95         | stmtList '\n'

   96 statement: ifStatement
   97          | forStatement
   98          | whileStatement
   99          | nextStatement
  100          | breakStatement
  101          | returnStatement

  102 stmt_or_expr: statement
  103             | expression

  104 declaration: classDef
  105            | functionDef
  106            | identifier optElements optRef identifier

  107 memberDefs: /* empty */
  108           | memberDef
  109           | memberDefs ';' memberDef
  110           | memberDefs ';'
  111           | memberDefs '\n' memberDef
  112           | memberDefs '\n'

  113 memberDef: formal
  114          | functionDef

  115 classDef: CLASS identifier ':' identifier '{' memberDefs '}'

  116 ifStatement: IF cond stmts
  117            | IF cond stmts ELSE stmts

  118 cond: '(' expression ')'

  119 forStatement: FOR forCond stmts

  120 forCond: '(' identifier IN expression ')'

  121 whileStatement: WHILE cond stmts

  122 nextStatement: NEXT

  123 breakStatement: BREAK

  124 returnStatement: RETURN
  125                | RETURN expression

  126 identifier: NAME

  127 vector: '[' vectorList ']'

  128 vectorList: vectorList ',' expression
  129           | expression

  130 constant: FALSE
  131         | TRUE
  132         | RBNULL
  133         | INT
  134         | STRING
  135         | REAL


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 3 5 7 9 11 94 95 111 112
'!' (33) 18
'&' (38) 87
'(' (40) 15 60 69 70 118 120
')' (41) 15 60 69 70 118 120
'*' (42) 23
'+' (43) 17 21
',' (44) 66 74 128
'-' (45) 16 22
'.' (46) 52 53 62
'/' (47) 24
':' (58) 20 115
';' (59) 4 6 8 10 12 92 93 109 110
'?' (63) 7 8 9 10
'[' (91) 51 53 56 57 58 59 82 83 84 85 127
']' (93) 51 53 56 57 58 59 82 83 84 85 127
'^' (94) 25
'{' (123) 88 115
'}' (125) 88 115
error (256) 11 12
REAL (258) 135
INT (259) 83 85 133
NAME (260) 126
STRING (261) 134
RBNULL (262) 132
FALSE (263) 130
TRUE (264) 131
FUNCTION (265) 69 70
CLASS (266) 115
FOR (267) 119
IN (268) 120
IF (269) 116 117
ELSE (270) 117
WHILE (271) 121
NEXT (272) 122
BREAK (273) 123
RETURN (274) 124 125
ARROW_ASSIGN (275) 42 43
TILDE_ASSIGN (276) 44 45
TILDEIID_ASSIGN (277) 46 47
EQUATION_ASSIGN (278) 48 49
EQUAL (279) 68 76 78
AND (280) 19 32
OR (281) 33
AND2 (282) 34
OR2 (283) 35
GT (284) 31
GE (285) 30
LT (286) 26
LE (287) 27
EQ (288) 28
NE (289) 29
END_OF_INPUT (290) 1
UNOT (291)
UPLUS (292)
UMINUS (293)
UAND (294)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
prog (60)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12, on right: 0
expression (61)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    31 32 33 34 35 36 37 38 39 40 41, on right: 15 16 17 18 19 20 21
    22 23 24 25 26 27 28 29 30 31 32 33 34 35 42 43 48 49 51 53 56
    58 67 68 76 78 103 118 120 125 128 129
arrowAssign (62)
    on left: 42 43, on right: 36
tildeAssign (63)
    on left: 44 45, on right: 38
tildeIidAssign (64)
    on left: 46 47, on right: 39
equationAssign (65)
    on left: 48 49, on right: 37
variable (66)
    on left: 50 51 52 53, on right: 41 42 44 46 48 52 53 62
optElements (67)
    on left: 54 55, on right: 50 51 52 53 106
elementList (68)
    on left: 56 57 58 59, on right: 55 58 59
fxnCall (69)
    on left: 60, on right: 51 53 61 62
functionCall (70)
    on left: 61 62, on right: 9 10 40 43 44 45 46 47 49
optArguments (71)
    on left: 63 64, on right: 60
argumentList (72)
    on left: 65 66, on right: 64 66
argument (73)
    on left: 67 68, on right: 65 66
functionDef (74)
    on left: 69 70, on right: 105 114
optFormals (75)
    on left: 71 72, on right: 69 70
formalList (76)
    on left: 73 74, on right: 72 74
formal (77)
    on left: 75 76 77 78, on right: 73 74 113
typeSpec (78)
    on left: 79, on right: 70 77 78
optDims (79)
    on left: 80 81, on right: 79
dimList (80)
    on left: 82 83 84 85, on right: 81 84 85
optRef (81)
    on left: 86 87, on right: 79 106
stmts (82)
    on left: 88 89, on right: 69 70 116 117 119 121
stmtList (83)
    on left: 90 91 92 93 94 95, on right: 88 92 93 94 95
statement (84)
    on left: 96 97 98 99 100 101, on right: 102
stmt_or_expr (85)
    on left: 102 103, on right: 3 4 89 91 92 94
declaration (86)
    on left: 104 105 106, on right: 5 6
memberDefs (87)
    on left: 107 108 109 110 111 112, on right: 109 110 111 112 115
memberDef (88)
    on left: 113 114, on right: 108 109 111
classDef (89)
    on left: 115, on right: 104
ifStatement (90)
    on left: 116 117, on right: 96
cond (91)
    on left: 118, on right: 116 117 121
forStatement (92)
    on left: 119, on right: 97
forCond (93)
    on left: 120, on right: 119
whileStatement (94)
    on left: 121, on right: 98
nextStatement (95)
    on left: 122, on right: 99
breakStatement (96)
    on left: 123, on right: 100
returnStatement (97)
    on left: 124 125, on right: 101
identifier (98)
    on left: 126, on right: 7 8 50 52 60 68 69 70 75 76 77 78 79 106
    115 120
vector (99)
    on left: 127, on right: 14
vectorList (100)
    on left: 128 129, on right: 127 128
constant (101)
    on left: 130 131 132 133 134 135, on right: 13


state 0

    0 $accept: . prog $end

    error         shift, and go to state 1
    REAL          shift, and go to state 2
    INT           shift, and go to state 3
    NAME          shift, and go to state 4
    STRING        shift, and go to state 5
    RBNULL        shift, and go to state 6
    FALSE         shift, and go to state 7
    TRUE          shift, and go to state 8
    FUNCTION      shift, and go to state 9
    CLASS         shift, and go to state 10
    FOR           shift, and go to state 11
    IF            shift, and go to state 12
    WHILE         shift, and go to state 13
    NEXT          shift, and go to state 14
    BREAK         shift, and go to state 15
    RETURN        shift, and go to state 16
    AND           shift, and go to state 17
    END_OF_INPUT  shift, and go to state 18
    '?'           shift, and go to state 19
    '+'           shift, and go to state 20
    '-'           shift, and go to state 21
    '('           shift, and go to state 22
    '['           shift, and go to state 23
    '\n'          shift, and go to state 24
    '!'           shift, and go to state 25

    prog             go to state 26
    expression       go to state 27
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    tildeIidAssign   go to state 30
    equationAssign   go to state 31
    variable         go to state 32
    fxnCall          go to state 33
    functionCall     go to state 34
    functionDef      go to state 35
    statement        go to state 36
    stmt_or_expr     go to state 37
    declaration      go to state 38
    classDef         go to state 39
    ifStatement      go to state 40
    forStatement     go to state 41
    whileStatement   go to state 42
    nextStatement    go to state 43
    breakStatement   go to state 44
    returnStatement  go to state 45
    identifier       go to state 46
    vector           go to state 47
    constant         go to state 48


state 1

   11 prog: error . '\n'
   12     | error . ';'

    '\n'  shift, and go to state 49
    ';'   shift, and go to state 50


state 2

  135 constant: REAL .

    $default  reduce using rule 135 (constant)


state 3

  133 constant: INT .

    $default  reduce using rule 133 (constant)


state 4

  126 identifier: NAME .

    $default  reduce using rule 126 (identifier)


state 5

  134 constant: STRING .

    $default  reduce using rule 134 (constant)


state 6

  132 constant: RBNULL .

    $default  reduce using rule 132 (constant)


state 7

  130 constant: FALSE .

    $default  reduce using rule 130 (constant)


state 8

  131 constant: TRUE .

    $default  reduce using rule 131 (constant)


state 9

   69 functionDef: FUNCTION . identifier '(' optFormals ')' stmts
   70            | FUNCTION . typeSpec identifier '(' optFormals ')' stmts

    NAME  shift, and go to state 4

    typeSpec    go to state 51
    identifier  go to state 52


state 10

  115 classDef: CLASS . identifier ':' identifier '{' memberDefs '}'

    NAME  shift, and go to state 4

    identifier  go to state 53


state 11

  119 forStatement: FOR . forCond stmts

    '('  shift, and go to state 54

    forCond  go to state 55


state 12

  116 ifStatement: IF . cond stmts
  117            | IF . cond stmts ELSE stmts

    '('  shift, and go to state 56

    cond  go to state 57


state 13

  121 whileStatement: WHILE . cond stmts

    '('  shift, and go to state 56

    cond  go to state 58


state 14

  122 nextStatement: NEXT .

    $default  reduce using rule 122 (nextStatement)


state 15

  123 breakStatement: BREAK .

    $default  reduce using rule 123 (breakStatement)


state 16

  124 returnStatement: RETURN .
  125                | RETURN . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    $default  reduce using rule 124 (returnStatement)

    expression      go to state 59
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    constant        go to state 48


state 17

   19 expression: AND . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    expression      go to state 61
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    constant        go to state 48


state 18

    1 prog: END_OF_INPUT .

    $default  reduce using rule 1 (prog)


state 19

    7 prog: '?' . identifier '\n'
    8     | '?' . identifier ';'
    9     | '?' . functionCall '\n'
   10     | '?' . functionCall ';'

    NAME  shift, and go to state 4

    variable      go to state 62
    fxnCall       go to state 33
    functionCall  go to state 63
    identifier    go to state 64


state 20

   17 expression: '+' . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    expression      go to state 65
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    constant        go to state 48


state 21

   16 expression: '-' . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    expression      go to state 66
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    constant        go to state 48


state 22

   15 expression: '(' . expression ')'

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    expression      go to state 67
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    constant        go to state 48


state 23

  127 vector: '[' . vectorList ']'

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    expression      go to state 68
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    vectorList      go to state 69
    constant        go to state 48


state 24

    2 prog: '\n' .

    $default  reduce using rule 2 (prog)


state 25

   18 expression: '!' . expression

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    expression      go to state 70
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    constant        go to state 48


state 26

    0 $accept: prog . $end

    $end  shift, and go to state 71


state 27

   20 expression: expression . ':' expression
   21           | expression . '+' expression
   22           | expression . '-' expression
   23           | expression . '*' expression
   24           | expression . '/' expression
   25           | expression . '^' expression
   26           | expression . LT expression
   27           | expression . LE expression
   28           | expression . EQ expression
   29           | expression . NE expression
   30           | expression . GE expression
   31           | expression . GT expression
   32           | expression . AND expression
   33           | expression . OR expression
   34           | expression . AND2 expression
   35           | expression . OR2 expression
  103 stmt_or_expr: expression .

    AND   shift, and go to state 72
    OR    shift, and go to state 73
    AND2  shift, and go to state 74
    OR2   shift, and go to state 75
    GT    shift, and go to state 76
    GE    shift, and go to state 77
    LT    shift, and go to state 78
    LE    shift, and go to state 79
    EQ    shift, and go to state 80
    NE    shift, and go to state 81
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    ':'   shift, and go to state 86
    '^'   shift, and go to state 87

    $default  reduce using rule 103 (stmt_or_expr)


state 28

   36 expression: arrowAssign .

    $default  reduce using rule 36 (expression)


state 29

   38 expression: tildeAssign .

    $default  reduce using rule 38 (expression)


state 30

   39 expression: tildeIidAssign .

    $default  reduce using rule 39 (expression)


state 31

   37 expression: equationAssign .

    $default  reduce using rule 37 (expression)


state 32

   41 expression: variable .
   42 arrowAssign: variable . ARROW_ASSIGN expression
   44 tildeAssign: variable . TILDE_ASSIGN functionCall
   46 tildeIidAssign: variable . TILDEIID_ASSIGN functionCall
   48 equationAssign: variable . EQUATION_ASSIGN expression
   52 variable: variable . '.' identifier optElements
   53         | variable . '.' fxnCall '[' expression ']' optElements
   62 functionCall: variable . '.' fxnCall

    ARROW_ASSIGN     shift, and go to state 88
    TILDE_ASSIGN     shift, and go to state 89
    TILDEIID_ASSIGN  shift, and go to state 90
    EQUATION_ASSIGN  shift, and go to state 91
    '.'              shift, and go to state 92

    $default  reduce using rule 41 (expression)


state 33

   51 variable: fxnCall . '[' expression ']' optElements
   61 functionCall: fxnCall .

    '['  shift, and go to state 93

    $default  reduce using rule 61 (functionCall)


state 34

   40 expression: functionCall .
   43 arrowAssign: functionCall . ARROW_ASSIGN expression
   45 tildeAssign: functionCall . TILDE_ASSIGN functionCall
   47 tildeIidAssign: functionCall . TILDEIID_ASSIGN functionCall
   49 equationAssign: functionCall . EQUATION_ASSIGN expression

    ARROW_ASSIGN     shift, and go to state 94
    TILDE_ASSIGN     shift, and go to state 95
    TILDEIID_ASSIGN  shift, and go to state 96
    EQUATION_ASSIGN  shift, and go to state 97

    $default  reduce using rule 40 (expression)


state 35

  105 declaration: functionDef .

    $default  reduce using rule 105 (declaration)


state 36

  102 stmt_or_expr: statement .

    $default  reduce using rule 102 (stmt_or_expr)


state 37

    3 prog: stmt_or_expr . '\n'
    4     | stmt_or_expr . ';'

    '\n'  shift, and go to state 98
    ';'   shift, and go to state 99


state 38

    5 prog: declaration . '\n'
    6     | declaration . ';'

    '\n'  shift, and go to state 100
    ';'   shift, and go to state 101


state 39

  104 declaration: classDef .

    $default  reduce using rule 104 (declaration)


state 40

   96 statement: ifStatement .

    $default  reduce using rule 96 (statement)


state 41

   97 statement: forStatement .

    $default  reduce using rule 97 (statement)


state 42

   98 statement: whileStatement .

    $default  reduce using rule 98 (statement)


state 43

   99 statement: nextStatement .

    $default  reduce using rule 99 (statement)


state 44

  100 statement: breakStatement .

    $default  reduce using rule 100 (statement)


state 45

  101 statement: returnStatement .

    $default  reduce using rule 101 (statement)


state 46

   50 variable: identifier . optElements
   60 fxnCall: identifier . '(' optArguments ')'
  106 declaration: identifier . optElements optRef identifier

    '('  shift, and go to state 102
    '['  shift, and go to state 103

    $default  reduce using rule 54 (optElements)

    optElements  go to state 104
    elementList  go to state 105


state 47

   14 expression: vector .

    $default  reduce using rule 14 (expression)


state 48

   13 expression: constant .

    $default  reduce using rule 13 (expression)


state 49

   11 prog: error '\n' .

    $default  reduce using rule 11 (prog)


state 50

   12 prog: error ';' .

    $default  reduce using rule 12 (prog)


state 51

   70 functionDef: FUNCTION typeSpec . identifier '(' optFormals ')' stmts

    NAME  shift, and go to state 4

    identifier  go to state 106


state 52

   69 functionDef: FUNCTION identifier . '(' optFormals ')' stmts
   79 typeSpec: identifier . optDims optRef

    '('  shift, and go to state 107
    '['  shift, and go to state 108

    $default  reduce using rule 80 (optDims)

    optDims  go to state 109
    dimList  go to state 110


state 53

  115 classDef: CLASS identifier . ':' identifier '{' memberDefs '}'

    ':'  shift, and go to state 111


state 54

  120 forCond: '(' . identifier IN expression ')'

    NAME  shift, and go to state 4

    identifier  go to state 112


state 55

  119 forStatement: FOR forCond . stmts

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    FOR     shift, and go to state 11
    IF      shift, and go to state 12
    WHILE   shift, and go to state 13
    NEXT    shift, and go to state 14
    BREAK   shift, and go to state 15
    RETURN  shift, and go to state 16
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25
    '{'     shift, and go to state 113

    expression       go to state 27
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    tildeIidAssign   go to state 30
    equationAssign   go to state 31
    variable         go to state 32
    fxnCall          go to state 33
    functionCall     go to state 34
    stmts            go to state 114
    statement        go to state 36
    stmt_or_expr     go to state 115
    ifStatement      go to state 40
    forStatement     go to state 41
    whileStatement   go to state 42
    nextStatement    go to state 43
    breakStatement   go to state 44
    returnStatement  go to state 45
    identifier       go to state 60
    vector           go to state 47
    constant         go to state 48


state 56

  118 cond: '(' . expression ')'

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25

    expression      go to state 116
    arrowAssign     go to state 28
    tildeAssign     go to state 29
    tildeIidAssign  go to state 30
    equationAssign  go to state 31
    variable        go to state 32
    fxnCall         go to state 33
    functionCall    go to state 34
    identifier      go to state 60
    vector          go to state 47
    constant        go to state 48


state 57

  116 ifStatement: IF cond . stmts
  117            | IF cond . stmts ELSE stmts

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    FOR     shift, and go to state 11
    IF      shift, and go to state 12
    WHILE   shift, and go to state 13
    NEXT    shift, and go to state 14
    BREAK   shift, and go to state 15
    RETURN  shift, and go to state 16
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25
    '{'     shift, and go to state 113

    expression       go to state 27
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    tildeIidAssign   go to state 30
    equationAssign   go to state 31
    variable         go to state 32
    fxnCall          go to state 33
    functionCall     go to state 34
    stmts            go to state 117
    statement        go to state 36
    stmt_or_expr     go to state 115
    ifStatement      go to state 40
    forStatement     go to state 41
    whileStatement   go to state 42
    nextStatement    go to state 43
    breakStatement   go to state 44
    returnStatement  go to state 45
    identifier       go to state 60
    vector           go to state 47
    constant         go to state 48


state 58

  121 whileStatement: WHILE cond . stmts

    REAL    shift, and go to state 2
    INT     shift, and go to state 3
    NAME    shift, and go to state 4
    STRING  shift, and go to state 5
    RBNULL  shift, and go to state 6
    FALSE   shift, and go to state 7
    TRUE    shift, and go to state 8
    FOR     shift, and go to state 11
    IF      shift, and go to state 12
    WHILE   shift, and go to state 13
    NEXT    shift, and go to state 14
    BREAK   shift, and go to state 15
    RETURN  shift, and go to state 16
    AND     shift, and go to state 17
    '+'     shift, and go to state 20
    '-'     shift, and go to state 21
    '('     shift, and go to state 22
    '['     shift, and go to state 23
    '!'     shift, and go to state 25
    '{'     shift, and go to state 113

    expression       go to state 27
    arrowAssign      go to state 28
    tildeAssign      go to state 29
    tildeIidAssign   go to state 30
    equationAssign   go to state 31
    variable         go to state 32
    fxnCall          go to state 33
    functionCall     go to state 34
    stmts            go to state 118
    statement        go to state 36
    stmt_or_expr     go to state 115
    ifStatement      go to state 40
    forStatement     go to state 41
    whileStatement   go to state 42
    nextStatement    go to state 43
    breakStatement   go to state 44
    returnStatement  go to state 45
    identifier       go to state 60
    vector           go to state 47
    constant         go to state 48


state 59

   20 expression: expression . ':' expression
   21           | expression . '+' expression
   22           | expression . '-' expression
   23           | expression . '*' expression
   24           | expression . '/' expression
   25           | expression . '^' expression
   26           | expression . LT expression
   27           | expression . LE expression
   28           | expression . EQ expression
   29           | expression . NE expression
   30           | expression . GE expression
   31           | expression . GT expression
   32           | expression . AND expression
   33           | expression . OR expression
   34           | expression . AND2 expression
   35           | expression . OR2 expression
  125 returnStatement: RETURN expression .

    AND   shift, and go to state 72
    OR    shift, and go to state 73
    AND2  shift, and go to state 74
    OR2   shift, and go to state 75
    GT    shift, and go to state 76
    GE    shift, and go to state 77
    LT    shift, and go to state 78
    LE    shift, and go to state 79
    EQ    shift, and go to state 80
    NE    shift, and go to state 81
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    ':'   shift, and go to state 86
    '^'   shift, and go to state 87

    $default  reduce using rule 125 (returnStatement)


state 60

   50 variable: identifier . optElements
   60 fxnCall: identifier . '(' optArguments ')'

    '('  shift, and go to state 102
    '['  shift, and go to state 103

    $default  reduce using rule 54 (optElements)

    optElements  go to state 119
    elementList  go to state 105


state 61

   19 expression: AND expression .
   20           | expression . ':' expression
   21           | expression . '+' expression
   22           | expression . '-' expression
   23           | expression . '*' expression
   24           | expression . '/' expression
   25           | expression . '^' expression
   26           | expression . LT expression
   27           | expression . LE expression
   28           | expression . EQ expression
   29           | expression . NE expression
   30           | expression . GE expression
   31           | expression . GT expression
   32           | expression . AND expression
   33           | expression . OR expression
   34           | expression . AND2 expression
   35           | expression . OR2 expression

    $default  reduce using rule 19 (expression)


state 62

   52 variable: variable . '.' identifier optElements
   53         | variable . '.' fxnCall '[' expression ']' optElements
   62 functionCall: variable . '.' fxnCall

    '.'  shift, and go to state 92


state 63

    9 prog: '?' functionCall . '\n'
   10     | '?' functionCall . ';'

    '\n'  shift, and go to state 120
    ';'   shift, and go to state 121


state 64

    7 prog: '?' identifier . '\n'
    8     | '?' identifier . ';'
   50 variable: identifier . optElements
   60 fxnCall: identifier . '(' optArguments ')'

    '('   shift, and go to state 102
    '['   shift, and go to state 103
    '\n'  shift, and go to state 122
    ';'   shift, and go to state 123

    $default  reduce using rule 54 (optElements)

    optElements  go to state 119
    elementList  go to state 105


state 65

   17 expression: '+' expression .
   20           | expression . ':' expression
   21           | expression . '+' expression
   22           | expression . '-' expression
   23           | expression . '*' expression
   24           | expression . '/' expression
   25           | expression . '^' expression
   26           | expression . LT expression
   27           | expression . LE expression
   28           | expression . EQ expression
   29           | expression . NE expression
   30           | expression . GE expression
   31           | expression . GT expression
   32           | expression . AND expression
   33           | expression . OR expression
   34           | expression . AND2 expression
   35           | expression . OR2 expression

    '^'  shift, and go to state 87

    $default  reduce using rule 17 (expression)


state 66

   16 expression: '-' expression .
   20           | expression . ':' expression
   21           | expression . '+' expression
   22           | expression . '-' expression
   23           | expression . '*' expression
   24           | expression . '/' expression
   25           | expression . '^' expression
   26           | expression . LT expression
   27           | expression . LE expression
   28           | expression . EQ expression
   29           | expression . NE expression
   30           | expression . GE expression
   31           | expression . GT expression
   32           | expression . AND expression
   33           | expression . OR expression
   34           | expression . AND2 expression
   35           | expression . OR2 expression

    '^'  shift, and go to state 87

    $default  reduce using rule 16 (expression)


state 67

   15 expression: '(' expression . ')'
   20           | expression . ':' expression
   21           | expression . '+' expression
   22           | expression . '-' expression
   23           | expression . '*' expression
   24           | expression . '/' expression
   25           | expression . '^' expression
   26           | expression . LT expression
   27           | expression . LE expression
   28           | expression . EQ expression
   29           | expression . NE expression
   30           | expression . GE expression
   31           | expression . GT expression
   32           | expression . AND expression
   33           | expression . OR expression
   34           | expression . AND2 expression
   35           | expression . OR2 expression

    AND   shift, and go to state 72
    OR    shift, and go to state 73
    AND2  shift, and go to state 74
    OR2   shift, and go to state 75
    GT    shift, and go to state 76
    GE    shift, and go to state 77
    LT    shift, and go to state 78
    LE    shift, and go to state 79
    EQ    shift, and go to state 80
    NE    shift, and go to state 81
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    ':'   shift, and go to state 86
    '^'   shift, and go to state 87
    ')'   shift, and go to state 124


state 68

   20 expression: expression . ':' expression
   21           | expression . '+' expression
   22           | expression . '-' expression
   23           | expression . '*' expression
   24           | expression . '/' expression
   25           | expression . '^' expression
   26           | expression . LT expression
   27           | expression . LE expression
   28           | expression . EQ expression
   29           | expression . NE expression
   30           | expression . GE expression
   31           | expression . GT expression
   32           | expression . AND expression
   33           | expression . OR expression
   34           | expression . AND2 expression
   35           | expression . OR2 expression
  129 vectorList: expression .
